--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/3b60ca4704.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -20,9 +21,8 @@
       <label for="">Заголовок для таймера</label>
       <input type="text" id="title-date" placeholder="Заголовок">
 
-
       <label for="">Дата для отсчета</label>
-      <input type="date" id="date" name="date" placeholder="06/06/2023"/>
+      <input type="date" id="date" min="" name="date" placeholder="06/06/2023"/>
     </div>
     <button class="btn" id="btn">Начать</button>
 
